[package]
name = "roamer"
version = "0.1.0"
authors = ["Raheel Ahmad <ahmadraheel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
orgize = "0.8.4"
rusqlite = "0.24.2"
# sexp = "1.1.4"
serde-lexpr = "0.1.2"
