[package]
name = "roamer"
version = "0.1.0"
authors = ["Raheel Ahmad <ahmadraheel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
orgize = "0.8.4"
rusqlite = "0.24.2"
serde-lexpr = "0.1.2"
tera = "1"
serde = { version = "1.0", features = ["derive"] }
fs_extra = "1.2.0"
chrono = "0.4.6"
